# nlp-policy-nz

./: .bandit  .coveragerc  .dockerignore  .env.dev  .env.example  .env.prod  .env.staging  .gitattributes  .gitignore  .import_linter.cfg  .mutatest.toml  .pre-commit-config.yaml  .secrets.baseline  .tach.toml  .vale.ini  .zenodo.json  3.4.0  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Dockerfile.cloud-ocr  LICENSE  Makefile  PRIVACY.md  QUICKSTART.md  README.md  SECURITY.md  VERSION.json  ZENODO_MIRROR_MANIFEST.json  data_registry.json  design.md  docker-compose.yml  package.json  pixi.toml  pixi_out.txt  pyproject.toml  renovate.json  requirements.md  (+4 more)
.devcontainer/: devcontainer.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  agent-review.yml  dependabot.yml  release-drafter.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: a11y-scan.yml  agent-review.yml  auto-fix-ci.yml  benchmark-update.yml  benchmark.yml  build-binaries.yml  ci-learning-candidates.yml  ci.yml  cloud-ocr-operations.yml  cloud-ocr-worker-publish.yml  conductor-advance.yml  containerized-ci.yml  deploy-staging.yml  docker-publish.yml  docs.yml  load-test.yml  manuscript-review.yml  mirror_sync.yml  publish-hf-archive.yml  publish-hf-datasets.yml  publish-hf-models.yml  publish-hf-space.yml  publish-osf.yml  publish-pypi.yml  publish-zenodo.yml  quality-alert.yml  release-drafter.yml  release.yml  self-healing-ci.yml  stale.yml
artifacts/: analysis_artifact_blockers.json  analysis_artifact_manifest.json  visual_inspection_checklist.md
artifacts/baselines/: pytest-benchmark.json
artifacts/benchmarks/: spacy4_compatibility_spike_20260714.json
artifacts/diagrams/: pipeline_architecture.mmd  track_dependency.mmd  workflow_data_flow.mmd
artifacts/foio/: australian_cth_dry_run_bundle.json  bounded_evaluation_report.json  dry_run_derived_bundle.json
artifacts/manuscript/: abstract.md  manuscript.md  manuscript_manifest.json  manuscript_review_log.json  reproducibility_checklist.md  review_rubrics.json  submission_requirements.md  supplement.md
artifacts/tables/: corpus_summary.csv  corpus_summary.tex  entity_density.csv  ontology_coverage.csv  topic_distribution.csv
artifacts/track104/: spacy4_compatibility_spike.json
artifacts/track13/: silver_eval_metrics.json  silver_eval_report.md
artifacts/track19/: benchmark_20260624.json  full_suite_validation.json  full_suite_validation.txt
artifacts/track23/: coverage.xml  coverage_20260625.txt  (+11 more)
conductor/: __init__.py  dependency-policy-matrix.md  design.md  improvement-backlog.md  index.md  learning-log.md  maturity-checklist.md  mojo-migration-roadmap.md  product-guidelines.md  product.md  python314-readiness.md  quality-maintenance-checklist.md  requirements.md  run_cline_swarm.py  setup_state.json  tech-stack.md  tracks.md  workflow.md
config/: benchmark_thresholds.json
docs/: agentic_automation.md  architecture_comparison.md  archive-assurance.md  axiom-foundation-relevance.md  build_backend.md  capabilities.md  cli-contract.md  corpus_statistics.md  coverage.md  data_quality_monitoring.md  dspy_program_optimization.md  extraction-framework.md  extraction-runtime.md  foio-promotion-evidence.md  graph_vector_network_analysis.md  hf-archive-publication-runbook.md  interface-contract-governance.md  isaacus-inventory.md  isaacus_integration.md  langgraph_orchestration_evaluation.md  mojo_sandbox.md  multi-engine-parity.md  multi_archive_strategy.md  nz_ontologies.md  ontology-discovery-intake.md  ontology_mapping.md  perf.md  perf_regression.md  polars_native_pipeline.md  policyengine-pilot.md  profiling.md  publication_protocol.md  pydantic_vs_msgspec.md  python-runtime-matrix.md  registry-readiness.md  rulespec-promotion.md  spacy4-compatibility-spike.md  vector-store-dependency-decision.md  vllm_local_inference_runtime.md
docs-site/: astro.config.mjs  package-lock.json  package.json
examples/: client_health.py  client_process.py  client_search.py
experiments/: __init__.py
scripts/: agent_review.py  archive_assurance.py  benchmark_extraction_manifest_runtime.py  benchmark_msgspec_orjson.py  benchmark_pipeline_record_msgspec_pydantic.py  benchmark_tokenizers_chunking.py  build_nz_entity_kb.py  build_ocr_benchmark_scaffold.py  check_commit_message.py  check_conductor_mirror.py  check_dependency_security.py  check_interface_surface_contract.py  check_registry_readiness.py  check_version_consistency.py  ci_auto_fix.py  cloud_ocr_orchestrator.py  cloud_ocr_worker.py  compare_benchmarks.py  conductor_advance_agent.py  deploy_space.sh  download_isaacus_datasets.sh  evaluate_diffusion_gemma.sh  evaluate_isaacus_models.sh  evaluate_mamba.sh  evaluate_mor.sh  evaluate_track13_silver.py  evaluate_ttt.sh  finetune_gemma.sh  finetune_legal_bert.sh  finetune_mistral.sh  finetune_phi4.sh  finetune_qwen.sh  generate_all_artifacts.py  generate_docs_reference.py  jules_integration.py  jules_integration.sh  llm_judge_eval.py  memray_trace.py  plan_hf_archive.py  prepare_cloud_ocr_pilot_manifest.py  (+18 more)
spaces/: README.md  __init__.py  app.py  requirements.txt
tests/: .mutatest.toml  conftest.py  test_actions_runtime_pins.py  test_akn_v3.py  test_amendments.py  test_architecture_eval.py  test_archive_assurance.py  test_archive_schema.py  test_argument.py  test_argument_api_graph.py  test_argument_training.py  test_axiom_integration.py  test_capabilities.py  test_chunking.py  test_cli.py  test_cloud_ocr_operations.py  test_cloud_ocr_worker.py  test_conductor_mirror.py  test_contract_governance.py  test_coverage.py  test_data_registry.py  test_dataset_card.py  test_digitalnz_probe.py  test_embeddings.py  test_extraction_catalog.py  test_extraction_exporter.py  test_extraction_schemas.py  test_faiss_adapter.py  test_feature_extraction.py  test_foio_archive_adapter.py  test_foio_au_adapter.py  test_foio_nz_adapter.py  test_foio_promotion.py  test_framework_rac.py  test_gradio_space.py  test_graph.py  test_guard.py  test_hathi_ingestion.py  test_hf_archive_publication.py  test_hf_upload.py  (+155 more)
(+1083 files in other folders)
