[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "nlp_policy_nz"
version = "0.1.0"
description = "SOTA shared core NLP pipeline for New Zealand legislation and Hansard corpora"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Maintainer" }]
dependencies = [
    "spacy>=3.7.0",
    "transformers>=4.40.0",
    "torch>=2.2.0",
    "bitsandbytes>=0.42.0",
    "msgspec>=0.18.0",
    "narwhals>=1.0.0",
    "polars>=1.0.0",
    "pyarrow>=16.0.0",
    "lancedb>=0.6.0",
    "networkx>=3.0",
    "rdflib>=7.0.0",
    "faiss-cpu>=1.8.0",
    "requests>=2.31.0",
    "xmlschema>=3.4.0",
    "loguru>=0.7.2",
    "datasets>=2.19.0",
    "huggingface_hub>=0.23.0",
    "gradio>=4.0.0",
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "opentelemetry-api>=1.25.0",
    "opentelemetry-sdk>=1.25.0",
    "opentelemetry-exporter-otlp>=1.25.0",
]

[project.scripts]
nlp-policy-nz = "nlp_policy_nz.cli.main:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0.0",
    "hypothesis>=6.90",
    "mutatest>=3.0",
    "ruff>=0.3.0",
    "tach>=0.5.0",
    "complexipy>=0.2.0",
    "import-linter>=2.0",
    "pre-commit>=3.6.0",
    "scalene>=1.5.0",
    "memray>=1.12.0",
    "pytest-benchmark>=4.0.0",
    "pyright>=1.1.0",
]
training = [
    "accelerate>=0.30.0",
    "peft>=0.11.0",
    "trl>=0.9.0",
    "wandb>=0.17.0",
    "flash-attn>=2.5.0; platform_system == 'Linux'",
]

[tool.hatch.build.targets.wheel]
packages = ["src/nlp_policy_nz"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
# MAXIMUM strict rule selection covering:
# E/W: Pycodestyle · F: Pyflakes · I: Isort · N: Pep8-naming · UP: Pyupgrade
# B: Bugbear · A: Builtins shadowing · C4: Comprehensions · T20: Print statements
# PT: Pytest style · SIM: Simplify · ARG: Unused arguments · PTH: Pathlib usage
# PL: Pylint · RUF: Ruff-specific rules
# ANN: Annotations · D: Docstrings · TCH: Typing imports · YTT: sys.version checks
# RET: Return statements · FURB: Ruff for Ruff
# COM: Commas · DJ: Django · DTZ: Datetimez · EM: Exception messages
# ERA: Erased code · EXE: Executables · FA: Future annotations
# FLY: Flake8 · ICN: Import conventions · INP: In-package imports
# INT: Integer types · ISC: Implicit string concat · LOG: Logging
# NPY: NumPy · PD: Pandas · PERF: Performance · PGH: Pygrep-hooks
# PIE: PIE rules · PYI: Pyi · Q: Quotes · RSE: Raise semantics
# S: Security · SLF: Self/Cls · T10: Flake8-debugger
# TC: Type checking · TID: Tidy imports · TRY: Try/except
select = [
    "E", "W", "F", "I", "N", "UP", "B", "A", "C4", "T20",
    "PT", "SIM", "ARG", "PTH", "PL", "RUF",
    "ANN", "D", "TCH", "YTT", "RET", "FURB",
    "COM", "DJ", "DTZ", "EM", "ERA", "EXE",
    "FA", "FLY", "ICN", "INP", "INT", "ISC", "LOG",
    "NPY", "PD", "PERF", "PGH", "PIE",
    "PYI", "Q", "RSE", "S", "SLF", "T10", "TC", "TID", "TRY",
]
ignore = [
    "PLR0913",                   # Too many arguments (legacy code)
    "E501",                      # Line length handled by formatter
    "ANN101",                    # Missing type annotation for `self` in methods
    "ANN102",                    # Missing type annotation for `cls` in classmethods
    "D107",                      # Missing docstring in __init__ (redundant with class docstring)
    "D203",                      # 1 blank line required before class docstring (conflicts with D211)
    "D212",                      # Multi-line docstring summary should start at first line (conflicts with D213)
    "D213",                      # Multi-line docstring summary should start at second line (conflicts with D212)
    "D404",                      # First word of docstring should not be "This" (too strict for __init__)
    "D415",                      # First line should end with a period (relaxed for single-line docstrings)
    "COM812",                    # Trailing comma missing — handled by formatter
    "ISC001",                    # Implicit string concat — handled by formatter
    "EM101",                     # String literal in exception
    "EM102",                     # F-string in exception
    "PLR2004", "PLR0912", "PLR0915",
    "PERF401",                   # List comprehension vs loop
    "TRY301", "TRY003", "TRY004",
    "S110", "S311",
    "S404", "S603", "S607",
    "PLW2901",
    "TC001", "TC002", "TC003",
    "FA100", "ICN001",
    "PLC0415",
    "ERA001", "EXE001",
    "RUF100",
    "PLW0603",
    "N814",
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = [
    "ANN",                       # Relax annotations in tests
    "D",                         # Relax docstrings in tests
    "T20",                       # Allow print statements in tests
    "S101",                      # Allow assert in tests (ruff preview rule)
    "PLR2004",                   # Allow magic-value comparisons in tests
    "SLF", "ARG",
    "ERA001", "INP001", "S106", "S107",
    "PGH001", "PIE790",
    "EM", "TRY", "PERF", "FLY002", "PT017",
    "C408", "TC006", "Q000", "S314",
    "PLC0415",
]
"*/__init__.py" = [
    "D",                         # Relax docstrings in __init__.py re-exports
]

[tool.ruff.lint.isort]
combine-as-imports = true
force-single-line = false

[tool.ruff.format]
docstring-code-format = true    # Auto-format code examples in docstrings
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "lf"

# ── Static type checking (pyright) ──────────────────────────────────────
[tool.pyright]
strict = true
include = ["src"]
exclude = ["**/__pycache__", ".venv"]
typeCheckingMode = "strict"
useLibraryCodeForTypes = true
reportMissingTypeStubs = false
reportUnknownMemberType = false  # Relaxed for dynamic libraries like spacy

# ── Coverage ────────────────────────────────────────────────────────────
[tool.coverage.run]
source = ["src"]
omit = ["*/__pycache__/*", "*.venv/*"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "raise AssertionError",
    "raise NotImplementedError",
]

[tool.coverage.html]
directory = "coverage_html"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.legal_nz]
versioning = "semver"
logging = "loguru"
